Enregistrement nom des joueurs et correction z-index

--- a/modal.css
+++ b/modal.css
@@ -22,6 +22,7 @@ html {
 	height: 100%;
 	background: rgba(0, 0, 0, 0.7);
 	animation: fadeIn 0.5s both;
+	z-index: 10;
 }
 
 .modal-wrapper {
